--- a/Negotiation3/Base.lproj/Main_iPhone.storyboard
+++ b/Negotiation3/Base.lproj/Main_iPhone.storyboard
@@ -1129,7 +1129,7 @@
             </objects>
             <point key="canvasLocation" x="1524" y="-778"/>
         </scene>
-        <!--Links-->
+        <!--About Links-->
         <scene sceneID="vkt-xd-6qa">
             <objects>
                 <tableViewController id="Xei-tS-bpb" customClass="NEGLinksTableViewController" sceneMemberID="viewController">
@@ -1167,7 +1167,7 @@
                             <outlet property="delegate" destination="Xei-tS-bpb" id="kEb-4F-3Le"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Links" id="5Es-Yk-XOc">
+                    <navigationItem key="navigationItem" title="About Links" id="5Es-Yk-XOc">
                         <barButtonItem key="leftBarButtonItem" title="Home" style="plain" id="MoX-Zf-4bF">
                             <connections>
                                 <action selector="dissmiss:" destination="Xei-tS-bpb" id="Ewk-QG-47T"/>
@@ -1180,6 +1180,8 @@
                         <segue destination="pDf-tE-goB" kind="push" identifier="about_mw" id="tP3-F4-eX5"/>
                         <segue destination="V8Z-Y1-GMa" kind="push" identifier="about_negotiation_profiles" id="wKE-uQ-7bj"/>
                         <segue destination="hLB-HA-YkV" kind="push" identifier="about_negotiation_app" id="g9q-Ve-xWC"/>
+                        <segue destination="Q4R-ZZ-U8w" kind="push" identifier="about_scorecard" id="1On-3k-AJu"/>
+                        <segue destination="sCJ-aa-lC5" kind="push" identifier="about_best_practices" id="R3Q-3U-TTu"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mi0-Dc-ke2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1229,7 +1231,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rSR-mB-i5S" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2375" y="1354"/>
+            <point key="canvasLocation" x="2667" y="1366"/>
         </scene>
         <!--Profiles Table View Controller-->
         <scene sceneID="kaz-Ab-P0i">
@@ -1262,7 +1264,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MXs-6O-Mqw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1732" y="1346"/>
+            <point key="canvasLocation" x="2228" y="1366"/>
         </scene>
         <!--Detail-->
         <scene sceneID="Cn3-H9-jdl">
@@ -1643,7 +1645,7 @@
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                             </webView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="About Negotiation 360°" id="oYv-bG-FZ8"/>
                     <connections>
@@ -1653,6 +1655,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TQJ-Sa-R6q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2130" y="2068"/>
+        </scene>
+        <!--About Scorecard-->
+        <scene sceneID="U3N-Un-Z1D">
+            <objects>
+                <viewController id="Q4R-ZZ-U8w" userLabel="About Scorecard" customClass="NEGAboutScorecardViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="udq-Vf-GNW"/>
+                        <viewControllerLayoutGuide type="bottom" id="Iez-X0-Q0Q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dNS-iP-Mco">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ig4-FE-8Bx">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="About Scorecards" id="WrA-9M-esT"/>
+                    <connections>
+                        <outlet property="webView" destination="Ig4-FE-8Bx" id="JZV-2M-HMX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LwJ-oG-8AV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2511" y="2069"/>
+        </scene>
+        <!--About Best Practices-->
+        <scene sceneID="Faw-cC-Hag">
+            <objects>
+                <viewController id="sCJ-aa-lC5" userLabel="About Best Practices" customClass="NEGAboutBestPracticesViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZKx-C6-WEN"/>
+                        <viewControllerLayoutGuide type="bottom" id="qNj-HN-F5j"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dSE-zk-blX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Vg-IQ-LWp">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="About Best Practices" id="Avg-sl-gth"/>
+                    <connections>
+                        <outlet property="webView" destination="4Vg-IQ-LWp" id="Brt-t0-yIM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L9S-ak-wAq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2905" y="2068"/>
         </scene>
         <!--Bargaining Styles-->
         <scene sceneID="j7e-ox-iKi">
@@ -1998,14 +2056,14 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="oFu-12-oe6"/>
-        <segue reference="TxM-el-1ZU"/>
-        <segue reference="rig-AL-udf"/>
-        <segue reference="72D-xW-IWS"/>
-        <segue reference="CDr-fM-Uml"/>
         <segue reference="oA1-ch-634"/>
+        <segue reference="RxB-wf-QIq"/>
+        <segue reference="CDr-fM-Uml"/>
         <segue reference="JhG-7d-thQ"/>
         <segue reference="9hR-Rc-zEg"/>
+        <segue reference="rig-AL-udf"/>
+        <segue reference="TxM-el-1ZU"/>
+        <segue reference="oFu-12-oe6"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.90588235294117647" green="0.52549019607843139" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
